[gd_scene load_steps=29 format=3 uid="uid://ff264r8qliii"]

[ext_resource type="Script" path="res://Scripts/SceneManager.gd" id="1_0dt7b"]
[ext_resource type="Script" path="res://Level/StartMenu.gd" id="1_l8ete"]
[ext_resource type="AudioStream" uid="uid://cv0chk802x2yb" path="res://Sounds/Bit of Chiptune 3/Groovy.wav" id="2_k5yui"]
[ext_resource type="Texture2D" uid="uid://cf8qn6c18nxfn" path="res://Art/parallax-space-backgound.png" id="4_mx8ms"]
[ext_resource type="Texture2D" uid="uid://defapi0goon30" path="res://Art/jailbars.png" id="4_qbrj7"]
[ext_resource type="Texture2D" uid="uid://c80oje3s76opb" path="res://Characters/prisoner_sprite_sheet_transparent_16x16.png" id="5_nxwmh"]
[ext_resource type="Texture2D" uid="uid://bxwn1jdgef28r" path="res://Art/Dungeon Tile Set.png" id="6_6qx53"]

[sub_resource type="Theme" id="Theme_y2i4t"]

[sub_resource type="LabelSettings" id="LabelSettings_eqmds"]
font_size = 64
outline_size = 12
outline_color = Color(0.0142752, 0.0142752, 0.0142752, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2wpcr"]
font_size = 28
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_bm4w3"]
atlas = ExtResource("5_nxwmh")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkrfv"]
atlas = ExtResource("5_nxwmh")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c25k5"]
atlas = ExtResource("5_nxwmh")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1u47"]
atlas = ExtResource("5_nxwmh")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2nm1"]
atlas = ExtResource("5_nxwmh")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cluj5"]
atlas = ExtResource("5_nxwmh")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tenkk"]
atlas = ExtResource("5_nxwmh")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2sjy"]
atlas = ExtResource("5_nxwmh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x1pw"]
atlas = ExtResource("5_nxwmh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lk6g"]
atlas = ExtResource("5_nxwmh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgge4"]
atlas = ExtResource("5_nxwmh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgtc8"]
atlas = ExtResource("5_nxwmh")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qe34"]
atlas = ExtResource("5_nxwmh")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5jua"]
atlas = ExtResource("5_nxwmh")
region = Rect2(192, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kj144"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bm4w3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkrfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c25k5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1u47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2nm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cluj5")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tenkk")
}],
"loop": false,
"name": &"jump",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2sjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x1pw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lk6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgge4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgtc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qe34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5jua")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nengv"]
texture = ExtResource("6_6qx53")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0

[sub_resource type="TileSet" id="TileSet_1kwr4"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_nengv")

[sub_resource type="LabelSettings" id="LabelSettings_r6icw"]
font_size = 12
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="SceneManager" type="Node"]
script = ExtResource("1_0dt7b")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("1_l8ete")

[node name="CenterContainer" type="CenterContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = SubResource("Theme_y2i4t")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer/CenterContainer"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="MainMenu/MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "  START  "

[node name="LevelSelect" type="Button" parent="MainMenu/MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "LEVEL SELECT"

[node name="Options" type="Button" parent="MainMenu/MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "OPTIONS"

[node name="QuitGameButton" type="Button" parent="MainMenu/MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "  QUIT  "

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MainMenu/MarginContainer"]
stream = ExtResource("2_k5yui")
autoplay = true
bus = &"Music"

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
visible = false
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0666667, 0.0941176, 0.141176, 1)

[node name="ParallaxBackground" type="ParallaxBackground" parent="MainMenu"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="MainMenu/ParallaxBackground"]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="MainMenu/ParallaxBackground"]
z_index = -5

[node name="Parallax-space-backgound" type="Sprite2D" parent="MainMenu/ParallaxBackground/ParallaxLayer2"]
modulate = Color(0.0745098, 0.239216, 0.239216, 1)
z_index = -10
position = Vector2(320, 180)
scale = Vector2(2.35294, 2.25)
texture = ExtResource("4_mx8ms")

[node name="Jailbars" type="Sprite2D" parent="MainMenu"]
modulate = Color(0.262745, 0.262745, 0.262745, 1)
z_index = -2
position = Vector2(320, 180)
scale = Vector2(0.683333, 0.75)
texture = ExtResource("4_qbrj7")

[node name="Label" type="Label" parent="MainMenu"]
layout_mode = 2
offset_left = 244.0
offset_top = 8.0
offset_right = 396.0
offset_bottom = 62.0
text = "ESCAPE"
label_settings = SubResource("LabelSettings_eqmds")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="MainMenu"]
layout_mode = 2
offset_left = 224.0
offset_top = 56.0
offset_right = 424.0
offset_bottom = 82.0
text = "FROM CELL BLOCK 66"
label_settings = SubResource("LabelSettings_2wpcr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerSprite" type="CharacterBody2D" parent="MainMenu"]
process_mode = 3
modulate = Color(0.509804, 0.509804, 0.509804, 1)
z_index = -4
position = Vector2(320, 208)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MainMenu/PlayerSprite"]
process_mode = 3
light_mask = 0
z_index = 1
position = Vector2(-8, 0)
scale = Vector2(15.2625, 15.2625)
sprite_frames = SubResource("SpriteFrames_kj144")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.972748

[node name="TileMap" type="TileMap" parent="MainMenu"]
tile_set = SubResource("TileSet_1kwr4")
format = 2
layer_0/modulate = Color(0.156863, 0.156863, 0.156863, 1)
layer_0/z_index = -4
layer_0/tile_data = PackedInt32Array(0, 262144, 2, 65536, 393216, 3, 131072, 262144, 2, 196608, 262144, 3, 262144, 262144, 2, 327680, 393216, 3, 393216, 262144, 1, 458752, 262144, 3, 524288, 262144, 2, 589824, 262144, 2, 655360, 262144, 1, 1, 262144, 1, 65537, 262144, 2, 131073, 262144, 2, 196609, 262144, 2, 262145, 262144, 2, 327681, 262144, 1, 393217, 262144, 1, 458753, 262144, 1, 524289, 262144, 1, 589825, 262144, 1, 655361, 262144, 2, 2, 262144, 1, 65538, 262144, 2, 131074, 327680, 3, 196610, 262144, 3, 262146, 262144, 1, 327682, 196608, 3, 393218, 262144, 2, 458754, 262144, 1, 524290, 327680, 3, 589826, 262144, 2, 655362, 262144, 1, 3, 262144, 2, 65539, 262144, 2, 131075, 262144, 2, 196611, 327680, 3, 262147, 262144, 2, 327683, 327680, 3, 393219, 262144, 1, 458755, 262144, 2, 524291, 262144, 2, 589827, 327680, 3, 655363, 262144, 2, 4, 262144, 1, 65540, 262144, 1, 131076, 262144, 1, 196612, 262144, 1, 262148, 262144, 1, 327684, 262144, 2, 393220, 262144, 1, 458756, 262144, 2, 524292, 262144, 1, 589828, 262144, 2, 655364, 262144, 2, 5, 262144, 1, 65541, 262144, 2, 131077, 327680, 3, 196613, 262144, 1, 262149, 196608, 3, 327685, 262144, 1, 393221, 262144, 1, 458757, 262144, 2, 524293, 327680, 3, 589829, 262144, 1, 655365, 262144, 2, 6, 262144, 2, 65542, 262144, 2, 131078, 327680, 3, 196614, 262144, 2, 262150, 262144, 1, 327686, 262144, 2, 393222, 262144, 2, 458758, 262144, 2, 524294, 262144, 1, 589830, 262144, 3, 655366, 262144, 2, 7, 262144, 1, 65543, 262144, 1, 131079, 262144, 2, 196615, 262144, 1, 262151, 262144, 1, 327687, 262144, 1, 393223, 262144, 1, 458759, 262144, 2, 524295, 262144, 2, 589831, 262144, 1, 655367, 262144, 1, 8, 262144, 2, 65544, 262144, 1, 131080, 262144, 2, 196616, 262144, 2, 262152, 262144, 2, 327688, 262144, 2, 393224, 262144, 2, 458760, 262144, 1, 524296, 262144, 2, 589832, 262144, 1, 655368, 262144, 2, 9, 262144, 2, 65545, 262144, 1, 131081, 262144, 1, 196617, 262144, 1, 262153, 262144, 1, 327689, 262144, 1, 393225, 262144, 2, 458761, 262144, 2, 524297, 262144, 2, 589833, 262144, 2, 655369, 262144, 2, 10, 262144, 2, 65546, 262144, 1, 131082, 262144, 2, 196618, 262144, 2, 262154, 262144, 1, 327690, 262144, 1, 393226, 262144, 2, 458762, 262144, 1, 524298, 262144, 2, 589834, 262144, 2, 655370, 262144, 2, 11, 262144, 1, 65547, 262144, 2, 131083, 262144, 2, 196619, 262144, 2, 262155, 262144, 1, 327691, 262144, 2, 393227, 262144, 2, 458763, 262144, 1, 524299, 262144, 2, 589835, 262144, 1, 655371, 262144, 1, 12, 262144, 1, 65548, 262144, 1, 131084, 262144, 2, 196620, 262144, 1, 262156, 262144, 1, 327692, 262144, 1, 393228, 262144, 1, 458764, 196608, 3, 524300, 196608, 3, 589836, 262144, 1, 655372, 262144, 2, 13, 262144, 1, 65549, 196608, 3, 131085, 262144, 1, 196621, 262144, 1, 262157, 262144, 2, 327693, 196608, 3, 393229, 196608, 3, 458765, 262144, 2, 524301, 262144, 1, 589837, 196608, 3, 655373, 262144, 1, 14, 262144, 1, 65550, 262144, 2, 131086, 262144, 1, 196622, 327680, 3, 262158, 262144, 1, 327694, 262144, 1, 393230, 262144, 1, 458766, 262144, 1, 524302, 196608, 3, 589838, 262144, 2, 655374, 262144, 1, 15, 262144, 1, 65551, 262144, 2, 131087, 262144, 1, 196623, 262144, 2, 262159, 262144, 1, 327695, 262144, 1, 393231, 262144, 1, 458767, 262144, 1, 524303, 262144, 1, 589839, 262144, 1, 655375, 262144, 1, 16, 262144, 1, 65552, 262144, 1, 131088, 196608, 3, 196624, 262144, 3, 262160, 327680, 3, 327696, 196608, 3, 393232, 262144, 2, 458768, 196608, 3, 524304, 262144, 2, 589840, 262144, 2, 655376, 262144, 1, 17, 262144, 2, 65553, 262144, 1, 131089, 262144, 1, 196625, 262144, 2, 262161, 262144, 2, 327697, 262144, 2, 393233, 327680, 3, 458769, 327680, 3, 524305, 262144, 3, 589841, 262144, 2, 655377, 262144, 1, 18, 262144, 2, 65554, 262144, 2, 131090, 262144, 2, 196626, 262144, 2, 262162, 262144, 1, 327698, 262144, 2, 393234, 262144, 1, 458770, 262144, 2, 524306, 262144, 1, 589842, 262144, 2, 655378, 262144, 2, 19, 262144, 2, 65555, 262144, 2, 131091, 262144, 1, 196627, 327680, 3, 262163, 262144, 2, 327699, 262144, 2, 393235, 196608, 3, 458771, 262144, 1, 524307, 262144, 2, 589843, 262144, 1, 655379, 262144, 1)

[node name="Label3" type="Label" parent="MainMenu"]
layout_mode = 0
offset_left = 248.0
offset_top = 80.0
offset_right = 392.0
offset_bottom = 96.0
text = "A 2D Platformer from LGC Games"
label_settings = SubResource("LabelSettings_r6icw")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MainMenu/MarginContainer/CenterContainer/VBoxContainer/StartGameButton" to="MainMenu/MarginContainer" method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/CenterContainer/VBoxContainer/LevelSelect" to="MainMenu/MarginContainer" method="_on_level_select_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/CenterContainer/VBoxContainer/Options" to="MainMenu/MarginContainer" method="_on_options_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/CenterContainer/VBoxContainer/QuitGameButton" to="MainMenu/MarginContainer" method="_on_quit_game_button_pressed"]
